--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+::selection {
+  background-color: rgba(255, 196, 0, 0.5); /* Rosa semi-transparente */
+  color: white; /* Texto blanco cuando está seleccionado */
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
