--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     height: 8%;
-    background-color: #1a1a1a;
+    background-color: rgba(12, 12, 12, 0.8);
     color: #ffffff;
     display: flex;
     justify-content: space-between;
